docs-archive/apache-airflow-providers-amazon/9.36.0/_sources/_api/airflow/providers/amazon/aws/triggers/redshift_cluster/index.rst.txt
airflow.providers.amazon.aws.triggers.redshift_cluster
======================================================

.. py:module:: airflow.providers.amazon.aws.triggers.redshift_cluster


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.redshift_cluster.RedshiftCreateClusterTrigger
   airflow.providers.amazon.aws.triggers.redshift_cluster.RedshiftPauseClusterTrigger
   airflow.providers.amazon.aws.triggers.redshift_cluster.RedshiftCreateClusterSnapshotTrigger
   airflow.providers.amazon.aws.triggers.redshift_cluster.RedshiftResumeClusterTrigger
   airflow.providers.amazon.aws.triggers.redshift_cluster.RedshiftDeleteClusterTrigger
   airflow.providers.amazon.aws.triggers.redshift_cluster.RedshiftClusterTrigger
   airflow.providers.amazon.aws.triggers.redshift_cluster.RedshiftClusterSettledTrigger


Module Contents
---------------

.. py:class:: RedshiftCreateClusterTrigger(*, cluster_identifier, aws_conn_id = 'aws_default', region_name = None, waiter_delay = 15, waiter_max_attempts = 999999, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for RedshiftCreateClusterOperator.

   The trigger will asynchronously poll the boto3 API and wait for the
   Redshift cluster to be in the `available` state.

   :param cluster_identifier:  A unique identifier for the cluster.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the cluster is. Used to build the hook.
   :param verify: Whether or not to verify SSL certificates. Used to build the hook.
   :param botocore_config: Configuration dictionary for the botocore client. Used to build the hook.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: RedshiftPauseClusterTrigger(*, cluster_identifier, aws_conn_id = 'aws_default', region_name = None, waiter_delay = 15, waiter_max_attempts = 999999, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for RedshiftPauseClusterOperator.

   The trigger will asynchronously poll the boto3 API and wait for the
   Redshift cluster to be in the `paused` state.

   :param cluster_identifier:  A unique identifier for the cluster.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the cluster is. Used to build the hook.
   :param verify: Whether or not to verify SSL certificates. Used to build the hook.
   :param botocore_config: Configuration dictionary for the botocore client. Used to build the hook.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: RedshiftCreateClusterSnapshotTrigger(*, cluster_identifier, aws_conn_id = 'aws_default', region_name = None, waiter_delay = 15, waiter_max_attempts = 999999, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for RedshiftCreateClusterSnapshotOperator.

   The trigger will asynchronously poll the boto3 API and wait for the
   Redshift cluster snapshot to be in the `available` state.

   :param cluster_identifier:  A unique identifier for the cluster.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the cluster is. Used to build the hook.
   :param verify: Whether or not to verify SSL certificates. Used to build the hook.
   :param botocore_config: Configuration dictionary for the botocore client. Used to build the hook.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: RedshiftResumeClusterTrigger(*, cluster_identifier, aws_conn_id = 'aws_default', region_name = None, waiter_delay = 15, waiter_max_attempts = 999999, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for RedshiftResumeClusterOperator.

   The trigger will asynchronously poll the boto3 API and wait for the
   Redshift cluster to be in the `available` state.

   :param cluster_identifier:  A unique identifier for the cluster.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the cluster is. Used to build the hook.
   :param verify: Whether or not to verify SSL certificates. Used to build the hook.
   :param botocore_config: Configuration dictionary for the botocore client. Used to build the hook.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: RedshiftDeleteClusterTrigger(*, cluster_identifier, aws_conn_id = 'aws_default', region_name = None, waiter_delay = 30, waiter_max_attempts = 30, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger for RedshiftDeleteClusterOperator.

   :param cluster_identifier:  A unique identifier for the cluster.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param region_name: The AWS region where the cluster is. Used to build the hook.
   :param verify: Whether or not to verify SSL certificates. Used to build the hook.
   :param botocore_config: Configuration dictionary for the botocore client. Used to build the hook.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



.. py:class:: RedshiftClusterTrigger(aws_conn_id, cluster_identifier, target_status, poke_interval, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   RedshiftClusterTrigger is fired as deferred class with params to run the task in trigger worker.

   :param aws_conn_id: Reference to AWS connection id for redshift
   :param cluster_identifier: unique identifier of a cluster
   :param target_status: Reference to the status which needs to be checked
   :param poke_interval:  polling period in seconds to check for the status
   :param region_name: The AWS region where the cluster is. Used to build the hook.
   :param verify: Whether or not to verify SSL certificates. Used to build the hook.
   :param botocore_config: Configuration dictionary for the botocore client. Used to build the hook.


   .. py:attribute:: aws_conn_id


   .. py:attribute:: cluster_identifier


   .. py:attribute:: target_status


   .. py:attribute:: poke_interval


   .. py:attribute:: region_name
      :value: None



   .. py:attribute:: verify
      :value: None



   .. py:attribute:: botocore_config
      :value: None



   .. py:method:: serialize()

      Serialize RedshiftClusterTrigger arguments and classpath.



   .. py:property:: hook
      :type: airflow.providers.amazon.aws.hooks.redshift_cluster.RedshiftHook



   .. py:method:: run()
      :async:


      Run async until the cluster status matches the target status.



.. py:class:: RedshiftClusterSettledTrigger(*, cluster_identifier, aws_conn_id = 'aws_default', region_name = None, waiter_delay = 30, waiter_max_attempts = 30, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Wait until a Redshift cluster settles into a non-transitional (deletable) lifecycle.

   A ``delete_cluster`` call is rejected with ``InvalidClusterStateFault`` while an operation is in
   flight (e.g. a pause or resize). Because a busy cluster can settle into *different* terminal states
   depending on the in-flight operation (a ``pausing`` cluster becomes ``paused``; a ``resizing`` cluster
   becomes ``available``), this trigger uses the custom ``cluster_deletable`` waiter, which has one
   ``success`` acceptor per deletable ``ClusterStatus`` value rather than a single target state.

   :param cluster_identifier: unique identifier of a cluster
   :param waiter_delay: The amount of time in seconds to wait between attempts.
   :param waiter_max_attempts: The maximum number of attempts to be made.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: The AWS region where the cluster is. Used to build the hook.
   :param verify: Whether or not to verify SSL certificates. Used to build the hook.
   :param botocore_config: Configuration dictionary for the botocore client. Used to build the hook.


   .. py:method:: hook()

      Override in subclasses to return the right hook.



